--- a/project/travel/index.html
+++ b/project/travel/index.html
@@ -44,7 +44,7 @@
         <div class="places_container">
             <div class="place">
                 <div class="place_img">
-                    <img class="place_image" src="./istockphoto.jpg">
+                    <img class="place_image" src="./Img/istockphoto.jpg">
                 </div>
                 <div class="place_desc">
                     <h1 class="place_title">Panama</h1>
@@ -55,7 +55,7 @@
 
             <div class="place">
                 <div class="place_img">
-                    <img class="place_image" src="./1542250100641.jpg">
+                    <img class="place_image" src="./Img/1542250100641.jpg">
                 </div>
                 <div class="place_desc">
                     <h1 class="place_title">Mohana</h1>
@@ -66,7 +66,7 @@
 
             <div class="place">
                 <div class="place_img">
-                    <img class="place_image" src="./1-Learn.jpeg">
+                    <img class="place_image" src="./Img/1-Learn.jpeg">
                 </div>
                 <div class="place_desc">
                     <h1 class="place_title">Limca</h1>
@@ -77,7 +77,7 @@
 
             <div class="place">
                 <div class="place_img">
-                    <img class="place_image" src="./Consumer Survey.jpg">
+                    <img class="place_image" src="./Img/Consumer Survey.jpg">
                 </div>
                 <div class="place_desc">
                     <h1 class="place_title">Noha</h1>
@@ -100,7 +100,7 @@
 
         <div class="about_container">
             <div class="about_image">
-                <img src="./pexels.jpeg" alt="mountain" class="about_img">
+                <img src="./Img/pexels.jpeg" alt="mountain" class="about_img">
             </div>
             <div class="about_text">
                 <div class="padd">
