--- a/project/Ecommerce/index.html
+++ b/project/Ecommerce/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/201/201623.png">
+    <link rel="icon" href="https://icons.iconarchive.com/icons/rockettheme/ecommerce/256/shop-icon.png">
 </head>
 <body>
 
@@ -153,34 +153,6 @@
                     <div class="details">
 
                         <div class="details_container">
-                            <h2>Star Link</h2>
-                            <h3>$100</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eos quisquam explicabo?</p>
-                        </div>
-
-                    </div>
-                    
-                </div>
-
-                <div class="product">
-
-                    <div class="details">
-
-                        <div class="details_container">
-                            <h2>Jumbo</h2>
-                            <h3>$100</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eos quisquam explicabo?</p>
-                        </div>
-
-                    </div>
-                    
-                </div>
-
-                <div class="product">
-
-                    <div class="details">
-
-                        <div class="details_container">
                             <h2>Maroon</h2>
                             <h3>$100</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eos quisquam explicabo?</p>
@@ -306,7 +278,6 @@
                 <li class="quick_link">New Product</li>
                 <li class="quick_link">Contact</li>
                 <li class="quick_link">Cart</li>
-                <li class="quick_link">Download App</li>
                 <li class="quick_link">Subscribe Us</li>
             </ul>
         </div>
@@ -338,6 +309,10 @@
                 <img class="icon"  src="./media/image/pinterest.png">
                 <img class="icon"  src="./media/image/twitter.png">
                 <img class="icon"  src="./media/image/youtube.png">
+            </div>
+            <div class="app">
+                <img class="icon1"  src="./media/image/play_store.png">
+                <img class="icon1"  src="./media/image/app_store.png">
             </div>
         </div>
     </div>
