--- a/project/avengers/index.html
+++ b/project/avengers/index.html
@@ -18,15 +18,19 @@
             <nav class="navigation">
                 <ul class="nav">
                     <li class="nav-link">Home</li>
-                    <li class="nav-link">Hero</li>
-                    <li class="nav-link">Help</li>
-                    <li class="nav-link">Contact</li>
+                    <li class="nav-link">Videos</li>
+                    <li class="nav-link">Characters</li>
+                    <li class="nav-link">Comics</li>
+                    <li class="nav-link">Movies</li>
+                    <li class="nav-link">Games</li>
+                    <li class="nav-link">Store</li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- /* carousel section */ -->
+    <!-- ---------carousel-------- section  -->
+
     <section class="banner">
         <div class="slider">
             <div class="slide">
@@ -43,6 +47,9 @@
             </div>
             <div class="slide">
                 5
+            </div>
+            <div class="slide">
+                6
             </div>
         </div>
     </section>
