--- a/project/avengers/index.html
+++ b/project/avengers/index.html
@@ -118,9 +118,47 @@
     
 <!-- ------------------------------------------ -->
 
+<!-- /* ************************* Comics section ************************* */ -->
+
+    <div class="box comics_container">
+        <div class="container comics_cards">
+
+            <div class="comics">
+                <img src="./media/image/clean.jpg" class="img" alt="Hulk">
+            </div>
+
+            <div class="comics">
+                <img src="./media/image/100-2.jpg" class="img" alt="Hulk">
+            </div>
+
+            <div class="comics">
+                <img src="./media/image/amfan015cvr_col_0.jpg" class="img" alt="Hulk">
+            </div>
+
+            <div class="comics">
+                <img src="./media/image/75d8a6321c9fa8c3c11a017fda23236b.jpg" class="img" alt="Hulk">
+            </div>
+
+
+        </div>
+    </div>
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+<!-- ------------------------------------------ -->
+
+<!-- /* *********************** scroll to top Button ********************* */ -->
     <a href="#up" class="up">&lt;</a>
     <a href="#up"><img class="help" src="./media/image/nickfury.png"></a>
     
