--- a/project/martfury/index.html
+++ b/project/martfury/index.html
@@ -26,7 +26,18 @@
     <nav class="box navigation">
         <div class="nav container">
             <div class="extra1">
-                <a class="nav-link2" href="#">Shop By Department</a>
+                <a class="nav-link2 link3" href="#">Shop By Department
+                    <ul class="dropdown">
+                        <li class="link">New Arrivals</li>
+                        <li class="link">Best Sellers</li>
+                        <li class="link">Special Offers</li>
+                        <li class="link">Milks & Creams</li>
+                        <li class="link">Fruits</li>
+                        <li class="link">Vegetables</li>
+                        <li class="link">Butters & Eggs</li>
+                        <li class="link">Seeds & Spices</li>
+                    </ul>
+                </a>
             </div>
             <div class="extra2">
                 <a class="nav-link2" href="#">Home</a>
@@ -91,31 +102,111 @@
             <div class="product">
                 <figure>
                     <img class="product_img" src="./media/img/11-300x300.jpg">
-                    <figcaption>Hola</figcaption>
+                    <figcaption>Cola</figcaption>
                 </figure>
                 <figure>
                     <img class="product_img" src="./media/img/12-300x300.jpg">
-                    <figcaption>Hola</figcaption>
+                    <figcaption>Cola</figcaption>
                 </figure>
                 <figure>
                     <img class="product_img" src="./media/img/16-300x300.jpeg">
-                    <figcaption>Hola</figcaption>
+                    <figcaption>Cola</figcaption>
                 </figure>
                 <figure>
                     <img class="product_img" src="./media/img/17-300x300.jpg">
-                    <figcaption>Hola</figcaption>
+                    <figcaption>Cola</figcaption>
                 </figure>
                 <figure>
                     <img class="product_img" src="./media/img/20a-300x300.jpg">
-                    <figcaption>Hola</figcaption>
+                    <figcaption>Cola</figcaption>
                 </figure>
                 <figure>
                     <img class="product_img" src="./media/img/2a-300x300.jpeg">
-                    <figcaption>Hola</figcaption>
+                    <figcaption>Cola</figcaption>
                 </figure>
             </div>
 
         </div>
     </div>
+
+
+    <!-- subscribe to news letter -->
+
+<section class="subscribe">
+    <div class="subscribe_container">
+        <div class="content">
+            <h1 class="title sub_title">Get <span class="off">25%</span> Discount</h1>
+            <p class="subt">Subscribe to the Martfury mailing list
+                to receive updates on new arrivals, special offers
+                and our promotions.
+            </p>
+            <div class="search">
+                <input class="sub_inp" placeholder="Enter Your Email">
+                <button class="btn sub_btn">Subscribe</button>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<!-- +++++++++++++++footer-------------========== -->
+
+<footer class="footer container_center">
+    <div class="container footer_container">
+        <div class="footer_child">
+            <h1 class="footer_title">Quick Links<hr></h1>
+            <ul class="quick_links">
+                <li class="quick_link">Home</li>
+                <li class="quick_link">Product</li>
+                <li class="quick_link">New Product</li>
+                <li class="quick_link">Contact</li>
+                <li class="quick_link">Cart</li>
+                <li class="quick_link">Subscribe Us</li>
+            </ul>
+        </div>
+
+        <div class="footer_child">
+            <h1 class="footer_title">Contact Info<hr></h1>
+            <ul class="quick_links">
+                <li class="quick_link">Shop 442 Block-F Connaught Place Delhi</li>
+                <li class="quick_link">Info@brownshop.com</li>
+                <li class="quick_link">+91 9080706050</li>
+            </ul>
+        </div>
+
+        <div class="footer_child">
+            <h1 class="footer_title">Recent Blogs<hr></h1>
+            <ul class="quick_links blogs">
+                <li class="quick_link">The Future of Sustainable E-Commerce is Now</li>
+                <li class="quick_link">The Big Billion Days 2021 – News Updates</li>
+                <li class="quick_link">Sky’s the limit: For this former IAF officer, Flipkart is an adrenaline rush!</li>
+                <li class="quick_link">Enabling growth across the ecosystem</li>
+            </ul>
+        </div>
+
+        <div class="footer_child">
+            <h1 class="footer_title">Connect with Us<hr></h1>
+            <div class="social">
+                <img class="icon"  src="./media/img/facebook.png">
+                <img class="icon"  src="./media/img/instagram.png">
+                <img class="icon"  src="./media/img/pinterest.png">
+                <img class="icon"  src="./media/img/twitter.png">
+                <img class="icon"  src="./media/img/youtube.png">
+            </div>
+            <div class="app">
+                <img class="icon1"  src="./media/img/play_store.png">
+                <img class="icon1"  src="./media/img/app_store.png">
+            </div>
+        </div>
+    </div>
+
+</footer>
+
+<div class="copyright">
+    &copy; Copyright 2012 | All Rights Reserved <img class="pay" src="./media/img/payment.svg">
+</div>
+
+
+
 </body>
 </html>
