--- a/project/martfury/index.html
+++ b/project/martfury/index.html
@@ -28,7 +28,7 @@
             <div class="extra1">
                 <a class="nav-link2 link3" href="#">Shop By Department
                     <ul class="dropdown">
-                        <li class="link">New Arrivals</li>
+                        <!-- <li class="link">New Arrivals</li> -->
                         <li class="link">Best Sellers</li>
                         <li class="link">Special Offers</li>
                         <li class="link">Milks & Creams</li>
@@ -52,11 +52,35 @@
         </div>
     </nav>
     <section class="banner">
-        <div class="slide">1</div>
-        <div class="slide">2</div>
-        <div class="slide">3</div>
-        <div class="slide">4</div>
-        <div class="slide">5</div>
+        <div class="slide"></div>
+        <div class="slide">
+            <div class="slide_text">
+                <h1 class="title banner_title">Get <span class="off">25%</span> Discount</h1>
+                <p class="subt">Subscribe to the Martfury mailing list
+                    to receive updates on new arrivals, special offers
+                    and our promotions.
+                </p>
+            </div>
+        </div>
+        <div class="slide">
+            <div class="slide_text">
+                <h1 class="title banner_title">Get <span class="off">25%</span> Discount</h1>
+                <p class="subt">Subscribe to the Martfury mailing list
+                    to receive updates on new arrivals, special offers
+                    and our promotions.
+                </p>
+            </div>
+        </div>
+        <div class="slide">
+            <div class="slide_text">
+                <h1 class="title banner_title">Get <span class="off">25%</span> Discount</h1>
+                <p class="subt">Subscribe to the Martfury mailing list
+                    to receive updates on new arrivals, special offers
+                    and our promotions.
+                </p>
+            </div>
+        </div>
+        <div class="slide"></div>
     </section>
     <div class="box">
         <div class="container head_con">
