--- a/project/martfury/index.html
+++ b/project/martfury/index.html
@@ -56,7 +56,7 @@
         <div class="slide">
             <div class="slide_text">
                 <h1 class="title banner_title">Get <span class="off">25%</span> Discount</h1>
-                <p class="subt">Subscribe to the Martfury mailing list
+                <p class="banner_text">Subscribe to the Martfury mailing list
                     to receive updates on new arrivals, special offers
                     and our promotions.
                 </p>
@@ -64,17 +64,14 @@
         </div>
         <div class="slide">
             <div class="slide_text">
-                <h1 class="title banner_title">Get <span class="off">25%</span> Discount</h1>
-                <p class="subt">Subscribe to the Martfury mailing list
-                    to receive updates on new arrivals, special offers
-                    and our promotions.
-                </p>
+                <h1 class="title banner_title">Happy Summer</h1>
+                <p class="banner_text2">Combo super Discount Fresh Vegetables and Fruits basket</p>
             </div>
         </div>
         <div class="slide">
             <div class="slide_text">
                 <h1 class="title banner_title">Get <span class="off">25%</span> Discount</h1>
-                <p class="subt">Subscribe to the Martfury mailing list
+                <p class="banner_text">Subscribe to the Martfury mailing list
                     to receive updates on new arrivals, special offers
                     and our promotions.
                 </p>
