--- a/project/manali/index.html
+++ b/project/manali/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="box">
         <div class="container">
-            <div class="logo">ADVENTURE</div>
+            <div class="logo">HOME</div>
             <nav class="navigation">
                     <ul class="nav">
                         <li class="link">Home</li>
