travel web upadte

--- a/project/travel/index.html
+++ b/project/travel/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style_mobile.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/201/201623.png">
 </head>
 <body>
