--- a/project/travel/index.html
+++ b/project/travel/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./style_mobile.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mobile_style.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/201/201623.png">
 </head>
 <body>
