--- a/project/Ecommerce/index.html
+++ b/project/Ecommerce/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mobile_style.css">
     <link rel="icon" href="https://icons.iconarchive.com/icons/rockettheme/ecommerce/256/shop-icon.png">
 </head>
 <body>
@@ -45,7 +46,7 @@
 
             <div class="banner_details">
                 <div class="padd">
-                    <h1 class="banner_title">Get Your celebrity Style Here</h1>
+                    <h1 class="banner_title">Get Your </br>celebrity</br> Style Here</h1>
 
                     <button class="btn">Start Shopping</button>
 
