--- a/project/Ecommerce/index.html
+++ b/project/Ecommerce/index.html
@@ -18,7 +18,7 @@
         <div class="container header_container">
             
             <div class="logo">
-                <p>Stop n Shop</p>
+                <p>Shop<span>Circuit</span></p>
             </div>
 
             <nav class="navigation">
@@ -180,7 +180,7 @@
             <div class="gall_details">
                 <div class="gall_padd">
                     <h1 class="gall_title">
-                        The Ultimate winter Fashion is here
+                        The joy of dressing is an art.
                     </h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus deleniti quo explicabo repellendus distinctio provident maxime ab ipsa beatae laborum.</p>
 
@@ -194,7 +194,7 @@
             <div class="gall_details">
                 <div class="gall_padd">
                     <h1 class="gall_title">
-                        The Ultimate winter Fashion is here
+                        Fashions fade, style is eternal.
                     </h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus deleniti quo explicabo repellendus distinctio provident maxime ab ipsa beatae laborum.</p>
 
@@ -208,7 +208,7 @@
             <div class="gall_details">
                 <div class="gall_padd">
                     <h1 class="gall_title">
-                        The Ultimate winter Fashion is here
+                        Trendy is the last stage before tacky.
                     </h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus deleniti quo explicabo repellendus distinctio provident maxime ab ipsa beatae laborum.</p>
 
@@ -222,7 +222,7 @@
             <div class="gall_details">
                 <div class="gall_padd">
                     <h1 class="gall_title">
-                        The Ultimate winter Fashion is here
+                        I make clothes, women make fashion.
                     </h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus deleniti quo explicabo repellendus distinctio provident maxime ab ipsa beatae laborum.</p>
 
